<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="@color/colorPrimaryLight"
    android:layout_height="wrap_content">

    <RadioGroup
        android:id="@+id/sortPrefBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="horizontal"
        android:weightSum="3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.103">
        <RadioButton
            android:id="@+id/default_sort"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            app:layout_constraintHorizontal_bias="0.0"
            android:text="@string/default_sort" />
        <RadioButton
            android:id="@+id/thumb_up_sort"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:layout_constraintHorizontal_bias="0.0"
            android:text="@string/thumbs_up" />

        <RadioButton
            android:id="@+id/thumb_down_sort"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:layout_constraintHorizontal_bias="1.0"
            android:text="@string/thumbs_down" />
    </RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>