<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    android:layout_marginBottom="6dp"
    android:layout_marginTop="6dp"
    app:cardBackgroundColor="@color/cardview_light_background"
    app:cardCornerRadius="4dp"
    app:cardElevation="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/termView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:gravity="center_vertical"
            android:text="@string/search_term"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:fontFamily="sans-serif-black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Search Term:" />

        <TextView
            android:id="@+id/definitionView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:gravity="center_vertical"
            android:text="@string/definition"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:fontFamily="sans-serif-black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/termView"
            tools:text="Definition:" />

        <TextView
            android:id="@+id/sampleView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:gravity="center_vertical"
            android:text="@string/sample"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/definitionContentView"
            tools:text="Example:" />

        <TextView
            android:id="@+id/definitionContentView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.553"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/definitionView"
            tools:text="This will be the true definition of the word. I don't think it will be the exact definition but since it's just for testing, I'm ok." />

        <TextView
            android:id="@+id/sampleContentView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sampleView"
            tools:text="this will be a sample use case of that the about term. What is used to make this code work. Sorry I don't know what I'm doing" />

        <TextView
            android:id="@+id/thumbUpView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:drawableStart="@drawable/thumb_up"
            android:drawablePadding="8dp"
            android:drawableTint="@color/colorPrimary"
            android:padding="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sampleContentView"
            tools:text="TextView" />

        <TextView
            android:id="@+id/thumbDownView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:drawableStart="@drawable/thumb_down"
            android:drawablePadding="8dp"
            android:drawableTint="@color/colorPrimary"
            app:layout_constraintBaseline_toBaselineOf="@+id/thumbUpView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/thumbUpView"
            tools:text="TextView" />

        <TextView
            android:id="@+id/searchTerm"
            style="?textAppearanceBody2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:gravity="center_vertical"
            app:layout_constraintBaseline_toBaselineOf="@+id/termView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.515"
            app:layout_constraintStart_toEndOf="@+id/termView"
            tools:text="What" />

        <TextView
            android:id="@+id/rankView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="1"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintBaseline_toBaselineOf="@+id/definitionView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.02"
            app:layout_constraintStart_toEndOf="@+id/definitionView" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>